--- a/aclap/src/app/components/event-shared/event-page/event-page.component.html
+++ b/aclap/src/app/components/event-shared/event-page/event-page.component.html
@@ -43,7 +43,7 @@
         </div>
         <div class="col-md-4 mb-3" style="height: 250px;">
             <div class="card h-100 clickable button d-flex justify-content-center" [style.background-color]="module.color" (click)="switchFiles()">
-                <h2 class="my-auto text-center">Material descargables</h2>
+                <h2 class="my-auto text-center">Material descargable</h2>
             </div>
         </div>
         <div *ngIf="isEducator" class="col-md-4 mb-3" style="height: 250px;">
