--- a/aclap/src/app/components/profile-shared/implementation-edit/implementation-edit.component.html
+++ b/aclap/src/app/components/profile-shared/implementation-edit/implementation-edit.component.html
@@ -88,7 +88,7 @@
                 <h3>Preguntas de evaluación</h3>
             </div>
             <div class="col">
-                <app-display-questions [questions]="questions" [answers]="answers" [editing]="true" ></app-display-questions>
+                <app-display-questions [questions]="questions" [answers]="answers" [editing]="true" [implementableId]="id" ></app-display-questions>
             </div>
         </div>
         <div class="col-12 col-md-5">
