Answers + Catching Errors

--- a/aclap/src/app/components/profile-shared/implementation-display/implementation-display.component.html
+++ b/aclap/src/app/components/profile-shared/implementation-display/implementation-display.component.html
@@ -68,7 +68,7 @@
                 </div>
                 <div class="col-12 d-flex justify-content-center">
                     <div class="container">
-                        <app-display-questions [questions]="questions" [answers]="answers" [editing]="true" [editable]="false" ></app-display-questions>
+                        <app-display-questions [questions]="questions" [answers]="answers" [editing]="true" [editable]="false" [implementableId]="implementation.implementableId" [implementationId]="id"></app-display-questions>
                     </div>
                 </div>
             </div>
