--- a/aclap/src/app/components/profile-shared/implementation-display/implementation-display.component.scss
+++ b/aclap/src/app/components/profile-shared/implementation-display/implementation-display.component.scss
@@ -9,6 +9,11 @@
     margin: 0 !important;
  }
 
+ .completed{
+    background-color: app.$green-color;
+    color: white;
+ }
+
  .centering{
     margin: auto;
     position: relative;
