--- a/aclap/src/app/components/home/home.component.html
+++ b/aclap/src/app/components/home/home.component.html
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div class="col-md-4 mb-3" style="height: 250px;">
-            <div class="card h-100 button d-flex clickable justify-content-center">
+            <div class="card h-100 button d-flex clickable justify-content-center" [routerLink]="['/eventos']">
                 <h2 class="my-auto text-center">Eventos</h2>
             </div>
         </div>
