Minor changes: UI
Allies, Module Page, Restore Password, Header, logo

--- a/aclap/src/app/components/about-us/about-us.component.html
+++ b/aclap/src/app/components/about-us/about-us.component.html
@@ -30,28 +30,41 @@
         </div>
     </div>
     <div class="row">
-        <div *ngFor="let paragraph of terms.split('\n')" class="col-12">
-            <p class="text-justify">
-                {{ paragraph }}
-            </p>
+        <div class="col-12">
+            <p class="text-justify">Está autorizada la reproducción total o parcial de esta publicación con propósitos educativos y sin fines de lucro, sin ningún permiso especial del titular de los derechos, con la condición de que se indique la fuente indicada en cada material. Derechos de propiedad intelectual (Creative Commons).</p>
+            <p class="text-justify">Para citar esta página debe usar la siguiente referencia:</p>
+            <p class="text-justify">Programa de las Naciones Unidas para el Desarrollo – Costa Rica & Área de Conservación La Amistad Pacífico. 2021. Plataforma educativa ACLA-P ECUCA. Recuperado de: <a href="https://aclap-81208.web.app/" > [enlance] </a>.</p>
+            <p class="text-justify">El PNUD y el ACLA-P agradecerán que se les remita un ejemplar de cualquier texto elaborado con base en la presente publicación a los correos comunicaciones.cr@undp.org y aclap.comunica@sinac.go.cr</p>
+            <p class="text-justify">El contenido de este volumen no refleja, necesariamente, las opiniones o políticas de PNUD - Costa Rica, ACLA-P o de sus organizaciones contribuyentes.</p>
         </div>
     </div>
     <hr>
     <div class="row mt-4">
-        <div class="col">
+        <div class="col-12">
+            <h2>Agradecimiento</h2>
+        </div>
+        <div class="col-12">
             <p class="text-justify">
                 Esta aplicación fué desarrollada y donada por estudiantes del Instituto Tecnológico de Costa Rica como parte del curso de Proyecto de Ingeniería de Software, durante el segundo semestre del 2020 bajo supervisión de la profesora María Estrada Sánchez. Los siguientes estudiantes desarrollaron esta aplicación:
             </p>
-            <li>
-                Alejandro José Schmidt Ramírez
-            </li>
-            <li>
-                Josué Daniel Canales Mena
-            </li>
-            <li>
-                Jose Fabio Pérez Alpizar
-            </li>
         </div>
     </div>
-    <hr>
+    <div class="row d-flex justify-content-center">
+        <div class="col-6 mt-3">
+            <ul>
+                <li>
+                    Jose Fabio Pérez Alpizar
+                </li>
+                <li>
+                    Josué Daniel Canales Mena
+                </li>
+                <li>
+                    Alejandro José Schmidt Ramírez
+                </li>
+            </ul>
+        </div>
+        <div class="col-6">
+            <img class="img-fluid" src="../../../assets/TEC-logo.png" >
+        </div>
+    </div>
 </div>
