--- a/aclap/src/app/components/module-shared/module-page/module-page.component.html
+++ b/aclap/src/app/components/module-shared/module-page/module-page.component.html
@@ -2,23 +2,19 @@
     <div class="container-fluid fill d-flex align-items-center">
         <div class="col d-flex justify-content-center title">
             <div class="row my-5">
-                <div class="col-12 col-md-4 col-lg-3 col-xl-2">
-                    <img class="img-fluid" [src]="module.imageUrl">
+                <div class="col-12 col-md-4 col-lg-auto col-xl-auto">
+                    <img class="img-fluid" [src]="module.imageUrl"  style="min-height: 150px; min-width: 150px; max-width: 200px; max-height: 200px;">
                 </div>
-                <div class="col">
+                <div class="col-auto">
                     <div class="row">
-                        <div class="col-12">
-                            <h1>
-                                {{module.name}}
-                            </h1>
-                        </div>
+                        <h1>
+                            {{module.name}}
+                        </h1>
                     </div>
                     <div class="row">
-                        <div class="col-12">
-                            <h5>
-                                Edad recomendada: {{module.recommendedAge}}
-                            </h5>
-                        </div>
+                        <h5>
+                            Edad recomendada: {{module.recommendedAge}}
+                        </h5>
                     </div>
                 </div>
                 <div *ngIf="isAdmin" class="col d-flex justify-content-end">
