--- a/aclap/src/app/components/profile-shared/implementable-implementations/implementable-implementations.component.html
+++ b/aclap/src/app/components/profile-shared/implementable-implementations/implementable-implementations.component.html
@@ -61,4 +61,11 @@
             </div>
         </div>
     </div>
+    <div *ngIf="(implementations.length === 0)" class="row mt-5">
+        <div class="col-12">
+            <h3 style="color: teal;">
+                No hay implementaciones subidas
+            </h3>
+        </div>
+    </div>
 </div>
