--- a/aclap/src/app/components/allies-shared/allies/allies.component.html
+++ b/aclap/src/app/components/allies-shared/allies/allies.component.html
@@ -20,9 +20,9 @@
         </div>
     </div>
     <div class="row d-flex justify-content-center" >
-        <a *ngFor="let ally of allies; index as i" class="col-md-5 card d-flex align-items-center clickable mx-1" [href]="ally.link" >
-            <div class="row d-flex justify-content-center">
-                <img class="card-img-top img-fluid" [src]="ally.imageUrl" [alt]="ally.name" style="max-height: 250px;">
+        <a *ngFor="let ally of allies; index as i" class="col-md-5 card d-flex align-items-center clickable mx-1" (click)="goToLink(ally.link)" >
+            <div class="row d-flex justify-content-center align-items-center" style="height: 250px;">
+                <img class="card-img-top img-fluid" [src]="ally.imageUrl" [alt]="ally.name" style="max-height: 250px;" >
             </div>
             <div class="card-body d-flex justify-content-center">
                 <h5 class="card-title text-center"> {{ ally.name }} </h5>
