--- a/aclap/src/app/components/profile-shared/profile-edit/profile-edit.component.html
+++ b/aclap/src/app/components/profile-shared/profile-edit/profile-edit.component.html
@@ -1,13 +1,13 @@
 <div class="container">
     <form [formGroup]=form>
         <div class="form-group row" >
-            <label for="password" class="col-xl-2 col-form-label">Cambiar Contraseña</label>
+            <label for="password" class="col-xl-4 col-form-label">Nueva contraseña</label>
             <div class="col-xl">
                 <input type="password" formControlName=password class="form-control" />
             </div>
         </div>
         <div class="form-group row">
-            <label for="confirmPassword" class="col-xl-2 col-form-label" >Confirmar Contraseña</label>
+            <label for="confirmPassword" class="col-xl-4 col-form-label" >Confirmar Contraseña</label>
             <div class="col-xl">
                 <input type="password" formControlName=confirmPassword class="form-control" />
             </div>
