--- a/aclap/src/app/components/shared/login/login.component.html
+++ b/aclap/src/app/components/shared/login/login.component.html
@@ -20,7 +20,7 @@
                         </div>
                         <div class="form-group">
                             <button class="btn btn-white">
-                                Login
+                                Ingresar
                             </button>
                         </div>
                     </form>
