--- a/aclap/src/app/components/shared/restore-password/restore-password.component.html
+++ b/aclap/src/app/components/shared/restore-password/restore-password.component.html
@@ -11,11 +11,11 @@
                 <div class="mb-5 card-body">
                     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                         <div class="form-group">
-                            <label for="email">E-mail</label>
+                            <label for="email">Correo electrónico</label>
                             <input type="text" formControlName="email" class="form-control"/>
                         </div>
                         <div class="form-group">
-                            <button class="btn btn-white" (click)="onSubmit()">
+                            <button class="btn btn-white" type="submit">
                                 Solicitar 
                             </button>
                         </div>
