--- a/aclap/src/app/components/about-us/about-us.component.html
+++ b/aclap/src/app/components/about-us/about-us.component.html
@@ -33,7 +33,7 @@
         <div class="col-12">
             <p class="text-justify">Está autorizada la reproducción total o parcial de esta publicación con propósitos educativos y sin fines de lucro, sin ningún permiso especial del titular de los derechos, con la condición de que se indique la fuente indicada en cada material. Derechos de propiedad intelectual (Creative Commons).</p>
             <p class="text-justify">Para citar esta página debe usar la siguiente referencia:</p>
-            <p class="text-justify">Programa de las Naciones Unidas para el Desarrollo – Costa Rica & Área de Conservación La Amistad Pacífico. 2021. Plataforma educativa ACLA-P ECUCA. Recuperado de: <a href="https://aclap-81208.web.app/" > [enlance] </a>.</p>
+            <p class="text-justify">Programa de las Naciones Unidas para el Desarrollo – Costa Rica & Área de Conservación La Amistad Pacífico. 2021. Plataforma educativa ACLA-P ECUCA. Recuperado de: <a [href]="url" > [enlance] </a>.</p>
             <p class="text-justify">El PNUD y el ACLA-P agradecerán que se les remita un ejemplar de cualquier texto elaborado con base en la presente publicación a los correos comunicaciones.cr@undp.org y aclap.comunica@sinac.go.cr</p>
             <p class="text-justify">El contenido de este volumen no refleja, necesariamente, las opiniones o políticas de PNUD - Costa Rica, ACLA-P o de sus organizaciones contribuyentes.</p>
         </div>
