--- a/aclap/src/app/components/profile-shared/implementation-list/implementation-list.component.html
+++ b/aclap/src/app/components/profile-shared/implementation-list/implementation-list.component.html
@@ -1,5 +1,5 @@
 <div *ngFor="let imp of implementations" class="row">
-    <div class="col-12">
+    <div class="col-12 my-3">
         <div class="card shadow clickable my-3" [routerLink]="editOrView(imp)">
             <div class="card-body" >
                 <div class="row d-flex justify-content-center">
