--- a/aclap/src/app/components/event-shared/teaching-guide/teaching-guide.component.html
+++ b/aclap/src/app/components/event-shared/teaching-guide/teaching-guide.component.html
@@ -1,9 +1,9 @@
 <div class="jumbotron jumbotron-fluid header-image" [style.background-image]="'url(' + module.bannerImageUrl + ')'">
-    <div class="container fill d-flex align-items-center">
-        <div class="col d-flex justify-content-center title">
-            <div class="row my-5">
-                <div class="col-2">
-                    <img class="img-fluid" [src]="module.imageUrl">
+    <div class="container-fluid fill d-flex align-items-center">
+        <div class="col-12 title">
+            <div class="row d-flex align-items-center my-5">
+                <div class="col-12 col-md-4 col-lg-auto offset-xl-1 col-xl-3">
+                    <img class="img-fluid" [src]="module.imageUrl" style="min-height: 150px; min-width: 150px; max-width: 200px; max-height: 200px;">
                 </div>
                 <div class="col">
                     <h1>
