--- a/aclap/src/app/components/section-shared/display/display-image/display-image.component.html
+++ b/aclap/src/app/components/section-shared/display/display-image/display-image.component.html
@@ -1,5 +1,5 @@
 <div class="row d-flex justify-content-center">
-    <div class="col-auto">
+    <div class="col">
         <div class="card shadow-sm">
             <div class="image" [ngStyle]="{backgroundImage:'url('+ image.url +')'}"></div>
             <div class="card-body">
