login alert box fixes

--- a/aclap/src/app/components/about-us/about-us.component.tns.scss
+++ b/aclap/src/app/components/about-us/about-us.component.tns.scss
@@ -49,6 +49,12 @@ $l-grey: #d3d8d8;
     height: 93;
 }
 
+.logo-tec-img{
+  width: 200;
+  height: 37;
+  margin-bottom: 10;
+}
+
 .banner-img{
     opacity: 0.85;
 }
