--- a/aclap/src/app/components/allies-shared/allies/allies.component.tns.html
+++ b/aclap/src/app/components/allies-shared/allies/allies.component.tns.html
@@ -2,13 +2,14 @@
     <ScrollView orientation="vertical" height="1000">
         <StackLayout>
 
-            <Gridlayout rows="*, *, *, *" columns="*" backgroundColor="black">
-                <Image rowspan="3" col="0" src="res://corredor_bio_2" stretch="aspectFill" class="img-banner"></Image>
-                <Label row="1" col="0" text="Aliados" class="header-text" textWrap="true"></Label>
-            </Gridlayout>
+          <gridlayout rows="*, *, *, *" columns="*" backgroundColor="black">
+            <Image rowspan="5" col="0" src="res://banner_allies" stretch="aspectFill" class="banner-img"></Image>
+            <Label row="2" col="0" text="Aliados" class="header-text" textWrap="true"></Label>
+            <Label row="5" col="0" text="Fotógrafo: Giancarlo Pucci" class="credit-text" textWrap="true"></Label>
+          </gridlayout>
 
             <Label
-            text= "La consolidación de alianzas estratégicas es un importante objetivo del desarrollo sostenible. Nuestros aliados son todas las personas o entidades que contribuyen a una cultura ambiental en sus núcleos familiares, su comunidad, a nivel organizacional, institucional, regional o nacional. Estos son algunos de los aliados del Programa de Educación Ambiental del ACLA-P." 
+            text= "La consolidación de alianzas estratégicas es un importante objetivo del desarrollo sostenible. Nuestros aliados son todas las personas o entidades que contribuyen a una cultura ambiental en sus núcleos familiares, su comunidad, a nivel organizacional, institucional, regional o nacional. Estos son algunos de los aliados del Programa de Educación Ambiental del ACLA-P."
             class= "body-text" textWrap="true" ></Label>
 
             <StackLayout *ngFor="let ally of allies" orientation="vertical">
