--- a/aclap/src/app/components/module-shared/modules/modules.component.tns.html
+++ b/aclap/src/app/components/module-shared/modules/modules.component.tns.html
@@ -4,10 +4,10 @@
 
             <Gridlayout rows="*, *, *, *" columns="*" backgroundColor="black">
                 <Image rowspan="5" col="0" src="res://banner_modules" stretch="aspectFill" class="banner-img"></Image>
-                <Label row="2" col="0" text="Modulos" class="header-text" textWrap="true"></Label>
+                <Label row="2" col="0" text="Módulos" class="header-text" textWrap="true"></Label>
                 <Label row="5" col="0" text="Fotógrafo: Giancarlo Pucci" class="credit-text" textWrap="true"></Label>
             </Gridlayout>
-             
+
             <Label
             text= "Los módulos son herramientas para la educación ambiental sobre temas de interés para la conservación de los recursos naturales y el desarrollo sostenible de las comunidades."
             class= "body-text" textWrap="true"></Label>
