--- a/aclap/src/app/components/profile-shared/implementation-edit/implementation-edit.component.tns.html
+++ b/aclap/src/app/components/profile-shared/implementation-edit/implementation-edit.component.tns.html
@@ -25,12 +25,12 @@
             <Label text="Participantes" class="first-subtitle-text-picker" textWrap="true"></Label>
 
             <StackLayout orientation="horizontal">
-                <Label text="Femeninos: " class="subtitle-text-picker" textWrap="true"></Label>
+                <Label text="Mujeres: " class="subtitle-text-picker" textWrap="true"></Label>
                 <ListPicker [(ngModel)]="pickerFparticipants" [items]="participants" class="participant-picker"></ListPicker>
             </StackLayout>
 
             <StackLayout orientation="horizontal">
-                <Label text="Masculinos: " class="subtitle-text-picker" textWrap="true"></Label>
+                <Label text="Hombres: " class="subtitle-text-picker" textWrap="true"></Label>
                 <ListPicker [(ngModel)]="pickerMparticipants" [items]="participants" class="participant-picker"></ListPicker>
             </StackLayout>
 
