--- a/aclap/src/app/components/about-us/about-us.component.tns.html
+++ b/aclap/src/app/components/about-us/about-us.component.tns.html
@@ -3,9 +3,9 @@
         <StackLayout orientation="vertical">
 
             <gridlayout rows="*, *, *, *" columns="*" backgroundColor="black">
-                <Image rowspan="5" col="0" src="res://banner_terms" stretch="aspectFill" class="banner-img"></Image>
+                <Image rowspan="5" col="0" src="res://banner_about_us" stretch="aspectFill" class="banner-img"></Image>
                 <Label row="2" col="0" text="Acerca de ACLA-P" class="header-text" textWrap="true"></Label>
-                <Label row="5" col="0" text="Fotógrafo: Roger González" class="credit-text" textWrap="true"></Label>
+                <Label row="5" col="0" text="Fotógrafo: Erik Solano Rojas" class="credit-text" textWrap="true"></Label>
             </gridlayout>
 
             <StackLayout *ngFor="let part of aboutUsText.split('\n')" orientation="vertical">
@@ -16,35 +16,58 @@
             text= "Las herramientas, información y materiales descargables que se comparten son para uso educativo solamente. No se permite la reproducción de estos con fines comerciales. Por favor respetar los créditos que se encuentran especificados."
             class= "body-text" textWrap="true" ></Label>
 
-            <Label
-            text= "" 
-            class= "body-text" textWrap="true" ></Label>
-
-            <Label
-            text= "Esta aplicación fué desarrollada y donada por estudiantes del Instituto Tecnológico de Costa Rica como parte del curso de Proyecto de Ingeniería de Software, durante el segundo semestre del 2020 bajo supervisión de la profesora María Estrada Sánchez. Los siguientes estudiantes desarrollaron esta aplicación:" 
-            class= "body-text" textWrap="true" ></Label>
-            
-            <Label
-            text= "Alejandro José Schmidt Ramírez" 
-            class= "body-text" textWrap="true" ></Label>
-            <Label
-            text= "Jose Fabio Pérez Alpízar" 
-            class= "body-text" textWrap="true" ></Label>
-            <Label
-            text= "Josué Daniel Canales Mena" 
-            class= "body-text" textWrap="true" ></Label>
-
-            <Label
-            text= "" 
-            class= "body-text" textWrap="true" ></Label>
-
             <Image src="res://logo_flat" stretch="aspectFill" class="logo-img" (tap)="openLink('http://www.sinac.go.cr/ES/ac/aclap/Paginas/default.aspx')"></Image>
 
-            <Label text= "Términos y Condiciones" class= "title-text" textWrap="true"></Label>
-            
+
+            <Label text="Términos y Condiciones" class="title-text" textWrap="true"></Label>
+
             <Label
-            text= " Las herramientas, información y materiales descargables que se comparten son para uso educativo solamente. No se permite la reproducción de estos con fines comerciales. Por favor respetar los créditos que se encuentran especificados."
+            text= "Está autorizada la reproducción total o parcial de esta publicación con propósitos educativos y sin fines de lucro, sin ningún permiso especial del titular de los derechos, con la condición de que se indique la fuente indicada en cada material. Derechos de propiedad intelectual (Creative Commons)."
             class= "body-text" textWrap="true" ></Label>
+
+            <Label
+            text= "Para citar esta página debe usar la siguiente referencia:"
+            class= "body-text" textWrap="true" ></Label>
+
+            <Label
+            text= "Programa de las Naciones Unidas para el Desarrollo – Costa Rica & Área de Conservación La Amistad Pacífico. 2021. Plataforma educativa ACLA-P ECUCA. Recuperado de: http:// - dirección de la página."
+            class= "body-text" textWrap="true" ></Label>
+
+            <Label
+            text= "El PNUD y el ACLA-P agradecerán que se les remita un ejemplar de cualquier texto elaborado con base en la presente publicación a los correos:"
+            class= "body-text" textWrap="true" ></Label>
+
+            <Label
+            text= " comunicaciones.cr@undp.org"
+            class= "body-text" textWrap="true" ></Label>
+
+            <Label
+            text= "aclap.comunica@sinac.go.cr"
+            class= "body-text" textWrap="true" ></Label>
+
+            <Label
+            text= "El contenido de este volumen no refleja, necesariamente, las opiniones o políticas de PNUD - Costa Rica, ACLA-P o de sus organizaciones contribuyentes."
+            class= "body-text" textWrap="true" ></Label>
+
+            <Label
+            text= ""
+            class= "body-text" textWrap="true" ></Label>
+
+            <Label
+            text= "Esta aplicación fué desarrollada y donada por estudiantes del Instituto Tecnológico de Costa Rica como parte del curso de Proyecto de Ingeniería de Software, durante el segundo semestre del 2020 bajo supervisión de la profesora María Estrada Sánchez. Los siguientes estudiantes desarrollaron esta aplicación:"
+            class= "body-text" textWrap="true" ></Label>
+
+            <Label
+            text= "Alejandro José Schmidt Ramírez"
+            class= "body-text" textWrap="true" ></Label>
+            <Label
+            text= "Jose Fabio Pérez Alpízar"
+            class= "body-text" textWrap="true" ></Label>
+            <Label
+            text= "Josué Daniel Canales Mena"
+            class= "body-text" textWrap="true" ></Label>
+
+            <Image src="res://logo_tec" stretch="aspectFill" class="logo-tec-img" (tap)="openLink('https://www.tec.ac.cr/')"></Image>
 
         </StackLayout>
     </ScrollView>
