--- a/aclap/src/app/components/allies-shared/allies/allies.component.tns.scss
+++ b/aclap/src/app/components/allies-shared/allies/allies.component.tns.scss
@@ -33,8 +33,8 @@ $l-grey: #d3d8d8;
 }
 
 .logo-img{
-    width: 200;
-    height: 200;
+    width: auto;
+    height: auto;
     margin-bottom: 10;
 }
 
@@ -52,4 +52,14 @@ $l-grey: #d3d8d8;
     height: 100;
     margin-left: 30;
     margin-right: 30;
+}
+
+.credit-text{
+  font-size: 10;
+  font-weight: bold;
+  color: rgb(255, 255, 255);
+  text-align: right;
+  margin-top: 30;
+  margin-right: 5;
+  font-family: 'Proxima_Bold', 'Proxima_Bold';
 }
