--- a/aclap/src/app/components/profile-shared/profile/profile.component.tns.scss
+++ b/aclap/src/app/components/profile-shared/profile/profile.component.tns.scss
@@ -84,14 +84,15 @@ $l-grey: #d3d8d8;
 }
 
 .user-text{
-    font-size: 26;
+    font-size: 18;
     font-weight: bold;
     color: rgb(255, 255, 255);
     text-align: center;
     margin-left: 10;
-    margin-top: 8;
     font-family: 'Proxima_Bold', 'Proxima_Bold';
+    vertical-align: center;
 }
+
 
 .user-img{
     height: 50;
