--- a/aclap/src/app/components/shared/login/login.component.tns.html
+++ b/aclap/src/app/components/shared/login/login.component.tns.html
@@ -5,7 +5,7 @@
         <Image src="res://logo_flat" class="logo"></Image>
         <TextField [(ngModel)]="txtUsername" hint="Correo electrónico" class="input input-border input-login"></TextField>
         <TextField [(ngModel)]="txtPassword" hint="Contraseña" secure="true" class="input input-border input-login"></TextField>
-        <Button text="Login" class="btn btn-primary btn-login" (tap)="onSubmit()"></Button>
+        <Button text="Ingresar" class="btn btn-primary btn-login" (tap)="onSubmit()"></Button>
     </StackLayout>
 
     <Label class="center" (tap)="changePassword()">
