--- a/aclap/src/app/components/module-shared/module-page/module-page.component.html
+++ b/aclap/src/app/components/module-shared/module-page/module-page.component.html
@@ -2,8 +2,8 @@
     <div class="container-fluid fill d-flex align-items-center">
         <div class="col-12 title">
             <div class="row d-flex align-items-center my-5">
-                <div class="col-12 col-md-4 col-lg-auto offset-xl-1 col-xl-3">
-                    <img class="img-fluid" [src]="module.imageUrl"  style="min-height: 150px; min-width: 150px; max-width: 200px; max-height: 200px;">
+                <div class="col-12 col-md-4 col-lg-auto offset-xl-1 col-xl-3 d-flex justify-content-center">
+                    <img class="img-fluid" [src]="module.imageUrl"  style="min-height: 150px; min-width: 150px; max-width: inherit; max-height: 200px;">
                 </div>
                 <div class="col-auto col-xl-6">
                     <div class="row">
